fix: when width too small, github icon went up to tangent of the top

--- a/style.css
+++ b/style.css
@@ -276,21 +276,4 @@ input:checked + .slider .slider-dot {
         font-size: 1rem !important;
         padding: 0.625rem 1.25rem !important;
     }
-    
-    header {
-        padding: 1rem !important;
-        position: relative;
-    }
-    
-    header a {
-        position: absolute;
-        right: 1rem;
-        top: 50%;
-        transform: translateY(-50%);
-    }
-    
-    header h1 {
-        margin-top: 0;
-        font-size: 1.5rem !important;
-    }
 }
